test: 콘텐츠 관련 테스트 커버리지 관리